--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
+  "name": "ElectronTemplate",
+  "version": "1.0.0",
+  "author": {
+    "name": "",
+    "email": ""
+  },
+  "description": "",
   "dependencies": {
-    "connected-react-router": "5.0.1",
+    "connected-react-router": "6.2.1",
     "history": "4.7.2",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "react-redux": "5.1.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-actions": "2.6.4"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "3.2.0",
-    "@types/react": "16.7.8",
+    "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
-    "@types/react-redux": "6.0.10",
+    "@types/react-redux": "6.0.12",
     "@types/react-router-dom": "4.3.1",
     "@types/webpack-merge": "4.1.3",
-    "css-loader": "1.0.1",
-    "electron": "3.0.10",
-    "file-loader": "2.0.0",
+    "css-loader": "2.1.0",
+    "electron": "4.0.1",
+    "electron-builder": "20.38.4",
+    "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.2.0",
+    "husky": "1.3.1",
     "lint-staged": "8.1.0",
-    "node-sass": "4.10.0",
-    "prettier": "1.15.2",
-    "rimraf": "2.6.2",
+    "node-sass": "4.11.0",
+    "prettier": "1.15.3",
+    "raw-loader": "1.0.0",
+    "rimraf": "2.6.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "ts-loader": "5.3.1",
+    "ts-loader": "5.3.3",
     "ts-node": "7.0.1",
-    "tslint": "5.11.0",
+    "tslint": "5.12.1",
     "tslint-plugin-prettier": "2.0.1",
-    "typescript": "3.1.6",
-    "webpack": "4.26.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10",
-    "webpack-merge": "4.1.4"
+    "typescript": "3.2.2",
+    "webpack": "4.28.4",
+    "webpack-cli": "3.2.1",
+    "webpack-dev-server": "3.1.14",
+    "webpack-merge": "4.2.1"
   },
   "engine": {
-    "node": "10.13.0",
+    "node": "10.15.0",
     "npm": "6.4.1"
   },
   "husky": {
@@ -55,6 +64,8 @@
   "scripts": {
     "start": "webpack-dev-server --port 3000",
     "build": "rimraf build && webpack",
+    "build:production": "NODE_ENV=production npm run build",
+    "release": "rimraf release && npm run build:production && ts-node scripts/release",
     "tslint": "tslint --fix --project ."
   }
 }
